Se corrigieron los Logos

--- a/Back-end/.env
+++ b/Back-end/.env
@@ -1,4 +1,4 @@
 PORT=4000
-MONGODB_URI=mongodb://localhost:27017/liga-deportiva
+MONGODB_URI=mongodb+srv://gerardo8manzano_db_user:2aum9rmmRxMGAfU9@cluster-liga.klaxlsv.mongodb.net/liga-deportiva?retryWrites=true&w=majority
 EMAIL_USER=ligadeportiva53@gmail.com
 EMAIL_PASS=jvfqugklippiwbak
